tests/NormalTests/paczka1/small_fuzzy/34305899.err
Error in line 6: cAyTVQzC A260 55,0
Error in line 13: jZmmI0 A467 40,0
